--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ click = "^7.1.2"
 [tool.poetry.dev-dependencies]
 mypy = "^0.782"
 flake8 = "^3.8.3"
+pynvim = "^0.4.2"
 
 [build-system]
 requires = ["poetry>=0.12"]
