--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ packages = [
 [tool.poetry.dependencies]
 python = "^3.6"
 click = "^7.1.2"
+requests = "^2.24.0"
 
 [tool.poetry.dev-dependencies]
 mypy = "^0.782"
