--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ packages = [
 python = "^3.6"
 click = "^7.1.2"
 requests = "^2.24.0"
+pyyaml = "^5.3.1"
 
 [tool.poetry.dev-dependencies]
 mypy = "^0.782"
